[package]
name = "star-constellation"
version = "0.2.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
license = "MPL-2.0"
description = "Nested threshold aggregation built on the STAR protocol"
edition = "2018"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.103"
ppoprf = { git = "https://github.com/brave/sta-rs", rev = "a0381f242314a906425e39f73656717e024636f3" }
sta-rs = { git = "https://github.com/brave/sta-rs", rev = "a0381f242314a906425e39f73656717e024636f3" }
rand_core = "0.6.3"
rand = { version = "0.8" }
bincode = "1.3"
lazy_static = "1.4.0"

[dev-dependencies]
httpmock = "0.6.8"
insta = "1.30.0"
base64 = "0.20.0"
