[package]
name = "star-constellation"
version = "0.2.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
license = "MPL-2.0"
description = "Nested threshold aggregation built on the STAR protocol"
edition = "2018"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.78"
ppoprf = "0.3.0"
sta-rs = "0.2.1"
rand = { version = "0.8", features = ["getrandom"] }
bincode = "1.3"
lazy_static = "1.4.0"

[dev-dependencies]
httpmock = "0.6.8"
insta = "1.31.0"
base64 = "0.20.0"
