[package]
name = "star-constellation"
version = "0.4.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
description = "Nested threshold aggregation built on the STAR protocol"
documentation = "https://docs.rs/star-constellation"
repository = "https://github.com/brave/constellation"
keywords = ["crypto", "protocol", "privacy", "analytics"]
categories = ["cryptography", "algorithms"]
license = "MPL-2.0"
edition = "2021"

[features]
default = ["cbor"]
cbor = ["dep:ciborium"]
bincode = ["dep:bincode"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.78"
ppoprf = "0.5"
sta-rs = "0.3.2"
rand = { version = "0.8", features = ["getrandom"] }
bincode = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
base64 = "=0.22.0"
bincode = "1.3"
ciborium = "0.2"
insta = "1.46"
